--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,2 +1,2 @@
-#githubAPIUrl=https://api.github.com/search/repositories?q=java&sort=stars&order=desc
-githubAPIUrl=https://api.github.com/repos/airbnb/javascript/commits
+gitHubAPIUrl=https://api.github.com/search/repositories?q=java&sort=stars&order=desc
+gitHubCommitsResource=/commits
