--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,2 +1,7 @@
-gitHubAPIUrl=https://api.github.com/search/repositories?q=java&sort=stars&order=desc
-gitHubCommitsResource=/commits
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:h2:mem:GH;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
