Added exception handling, actuator & swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ gitHubAPIUrl=https://api.github.com/search/repositories?q=java&sort=stars&order=
 gitHubCommitsResource=/commits
 maxRepoResults=1
 maxCommitResults=5
+info.app.name=Git Hub Favs
+info.app.description=Example Spring Boot Java application
+info.app.version=0.1.0
