Adding interfaces and unit tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,8 @@ maxCommitResults=5
 info.app.name=Git Hub Favs
 info.app.description=Example Spring Boot Java application
 info.app.version=0.1.0
+spring.datasource.url=jdbc:h2:mem:GH;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=${random.value}
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
